--- a/Html-files/about.html
+++ b/Html-files/about.html
@@ -125,7 +125,138 @@
     margin: 0;
     font-size: 24px;
 }
+
         
+    </style>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        .menu_container {
+            padding: 20px;
+        }
+        .menu_items {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+        .items {
+            flex: 1 1 calc(25% - 20px);
+            box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            padding: 20px;
+            position: relative;
+            background: #fff;
+            transition: transform 0.3s;
+        }
+        .items img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
+        .items h3 {
+            margin: 10px 0;
+            font-size: 1.5em; /* Adjust font size */
+        }
+        .items p {
+            margin: 10px 0;
+        }
+        .btn {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 10px 2px;
+            cursor: pointer;
+            border-radius: 8px;
+            transition: background-color 0.3s;
+        }
+        .btn:hover {
+            background-color: #45a049;
+        }
+        .modal-content {
+            display: none;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: #fff;
+            padding: 20px;
+            border: 1px solid #ccc;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            z-index: 10;
+            border-radius: 8px;
+        }
+        .show-modal .modal-content {
+            display: block;
+        }
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        .star-rating {
+            display: flex;
+            gap: 5px;
+            margin-top: 10px;
+        }
+        .star-button {
+            background: none;
+            border: none;
+            cursor: pointer;
+            color: #ffd700;
+        }
+        @media (max-width: 1200px) {
+            .items {
+                flex: 1 1 calc(33.333% - 20px);
+            }
+            .items h3 {
+                font-size: 1.4em;
+            }
+            .btn {
+                font-size: 15px;
+                padding: 8px 18px;
+            }
+        }
+        @media (max-width: 992px) {
+            .items {
+                flex: 1 1 calc(50% - 20px);
+            }
+            .items h3 {
+                font-size: 1.3em;
+            }
+            .btn {
+                font-size: 14px;
+                padding: 7px 16px;
+            }
+        }
+        @media (max-width: 768px) {
+            .items {
+                flex: 1 1 100%;
+            }
+            .items h3 {
+                font-size: 1.2em;
+            }
+            .btn {
+                font-size: 13px;
+                padding: 6px 14px;
+            }
+        }
     </style>
 
 </head>
