Updated the intro section

--- a/Html-files/team.html
+++ b/Html-files/team.html
@@ -242,7 +242,7 @@
                                     </p>
 
                                     
-                                    <a href="https://www.linkedin.com/in/charles-mwangi" target="_blank" class="linkedin-link">Coonect <br> <i class="fab fa-linkedin"></i></a>
+                                    <a href="https://www.linkedin.com/in/charles-mwangi" target="_blank" class="linkedin-link">Connect <br> <i class="fab fa-linkedin"></i></a>
                                 </article>
                             </div>
                         </div>
@@ -313,7 +313,7 @@
                         <div class="testimonal__swiper">
                             <div>
                                 <article class="testimonal__card">
-                                    <img src="/Images/njamu.jpg"
+                                    <img src="/Images/jam1.jfif"
                                         alt="" class="testimonal__image"
                                         style=" border-radius: 50%; object-fit: cover;">
                                     <h2 class="testimonal__title">GERALD NJAMURA</h2>
@@ -340,7 +340,7 @@
                                     </p>
 
                                     
-                                    <a href="https://www.linkedin.com/in/chrispin-maina" target="_blank" class="linkedin-link"> CONNECT <br><i class="fab fa-linkedin"></i></a>
+                                    <a href="https://www.linkedin.com/in/chrispin-maina" target="_blank" class="linkedin-link"> connect<br><i class="fab fa-linkedin"></i></a>
 
                                 </article>
                             </div>
