--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Adding favicon image -->
 
-    <link rel="shortcut icon" href="Images/logo 3.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/Smart-Nyuki-Solutions/ 3.png" type="image/x-icon">
 
     <link
         href="https://fonts.googleapis.com/css2?family=Fuggles&family=Mooli&family=Oswald:wght@600&family=Roboto:wght@100;300&display=swap"
@@ -88,7 +88,7 @@
         <ul class="hero-slider" data-hero-slider>
             <li class="slider-item active" data-hero-slider-item>
                 <div class="slider-bg">
-                    <img src="/Images/honey-bee-bee-bees-insect.jpg" width="1880" height="950" class="img-cover">
+                    <img src="/Smart-Nyuki-Solutions/Images/honey-bee-bee-bees-insect.jpg" width="1880" height="950" class="img-cover">
                 </div>
                 <p class="label-2 section-subtitle slider-reveal">Buzzing into the Future with Technology</p>
                 <h1 class="display-1 hero-title slider-reveal">
@@ -107,7 +107,7 @@
 
             <li class="slider-item active" data-hero-slider-item>
                 <div class="slider-bg">
-                    <img src="/Images/honey-comb-hexagon-background-4k-wallpaper-hd_901075-918.avif" width="1880" height="950" class="img-cover">
+                    <img src="/Smart-Nyuki-Solutions/Images/honey-comb-hexagon-background-4k-wallpaper-hd_901075-918.avif" width="1880" height="950" class="img-cover">
                 </div>
                 <p class="label-2 section-subtitle slider-reveal">From hive to honey: experience smarter beekeeping today</p>
                 <h1 class="display-1 hero-title slider-reveal">
@@ -128,7 +128,7 @@
             <li class="slider-item active" data-hero-slider-item>
                 <div class="slider-bg">
                     
-                    <img src="/Images/honey-bee-on-dark-background-close-up-macro-ai-generative-free-photo.jpg" width="1880" height="950" class="img-cover">
+                    <img src="Images/honey-bee-on-dark-background-close-up-macro-ai-generative-free-photo.jpg" width="1880" height="950" class="img-cover">
                 </div>
 
                 <p class="label-2 section-subtitle slider-reveal" style="font-style:italic;">Bee ahead with smart beekeeping solutions</p>
@@ -292,24 +292,24 @@
 
         <div class="menu_items" data-aos="zoom-out-up" data-aos-duration="1000" data-aos-offset="170" data-aos-easing="ease-in-out">
             <div class="items">
-                <img src="/images/cha.jfif">
+                <img src="/Smart-Nyuki-Solutions/images/cha.jfif">
                 <h3 style="font-style:italic;">Remote Monitoring</h3>
                 <p style="font-style:italic;">Data collected from the hive is displayed in a farmer’s mobile device</p>
             </div>
             <div class="items">
                 <img
-                    src="/Images/cha2.jfif">
+                    src="/Smart-Nyuki-Solutions/Images/cha2.jfif">
                 <h3 style="font-style:italic;">Bee-Alert</h3>
                 <p style="font-style:italic;">Notifications on a farmer’s mobile device when a certain parameter deviates the norm</p>
             </div>
             <div class="items">
                 <img
-                    src="/Images/cha3.jfif">
+                    src="/Smart-Nyuki-Solutions/Images/cha3.jfif">
                 <h3 style="font-style:italic;">Eco-Friendly</h3>
                 <p style="font-style:italic;">The colony survival rate is increased through pest and disease control and reduced intrusion.</p>
             </div>
             <div class="items">
-                <img src="/Images/cha4.jfif">
+                <img src="/Smart-Nyuki-Solutions/Images/cha4.jfif">
                 <h3 style="font-style:italic;">Data-driven harvesting presision</h3>
                 <p style="font-style:italic;">Harvesting times are determined from an analysis of the data collected</p>
             </div>
@@ -317,18 +317,7 @@
         </div>
     </section>
 
-    <!-- <div class="deals_container">
-
-    </div> -->
-
-    <!-- <div class="location_container">
-
-    </div> -->
-
-    <!-- <div class="franchise_container">
-
-    </div> -->
-   
+    
 
     <div class="footer">
         <footer>
