--- a/Html-files/team.html
+++ b/Html-files/team.html
@@ -234,7 +234,7 @@
                                     <img src="/Smart-Nyuki-Solutions/Images/1724264949276.jpg"
                                         alt="" class="testimonal__image"
                                         style=" border-radius: 50%; object-fit: cover;">
-                                    <h2 class="testimonal__title">CHARLES MWANGI</h2>
+                                    <h2 class="testimonal__title">CHARLES CHYNA</h2>
                                     <p class="testimonal__description">
                                         FRONT-END DEVELOPER
                                     
